--- a/SturmProjekt/SturmProjekt/SturmProjekt.csproj
+++ b/SturmProjekt/SturmProjekt/SturmProjekt.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Events\AddedPageEvent.cs" />
     <Compile Include="Events\CreateRechnungEvent.cs" />
     <Compile Include="Events\PageListEvent.cs" />
+    <Compile Include="Events\RechnungsPageEvent.cs" />
     <Compile Include="Events\RemovePictureEvent.cs" />
     <Compile Include="Events\SelectedPageEvent.cs" />
     <Compile Include="Models\LinesModel.cs" />
