delete partially fixed + started conifg

--- a/SturmProjekt/SturmProjekt/SturmProjekt.csproj
+++ b/SturmProjekt/SturmProjekt/SturmProjekt.csproj
@@ -88,6 +88,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="BL\BusinessLayer.cs" />
+    <Compile Include="BL\Config.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Events\AddedPageEvent.cs" />
     <Compile Include="Events\CreateRechnungEvent.cs" />
