--- a/SturmProjekt/SturmProjekt/SturmProjekt.csproj
+++ b/SturmProjekt/SturmProjekt/SturmProjekt.csproj
@@ -95,7 +95,9 @@
     <Compile Include="BL\RechnungsLogic.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Events\AddedPageEvent.cs" />
+    <Compile Include="Events\ChosenPageEvent.cs" />
     <Compile Include="Events\CreateRechnungEvent.cs" />
+    <Compile Include="Events\DeletedPageEvent.cs" />
     <Compile Include="Events\DrawOnRechnungEvent.cs" />
     <Compile Include="Events\PageListEvent.cs" />
     <Compile Include="Events\RechnungsPageEvent.cs" />
@@ -106,11 +108,9 @@
     <Compile Include="Models\ProfilePages.cs" />
     <Compile Include="ViewModels\AddRechnungViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="ViewModels\NavigateProfileViewModel.cs" />
     <Compile Include="ViewModels\PageListViewModel.cs" />
     <Compile Include="ViewModels\ProfileViewModel.cs" />
-    <Compile Include="Views\AddProfileView.xaml.cs">
-      <DependentUpon>AddProfileView.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Views\AddRechnungView.xaml.cs">
       <DependentUpon>AddRechnungView.xaml</DependentUpon>
     </Compile>
@@ -119,6 +119,9 @@
     </Compile>
     <Compile Include="Views\ConfirmView.xaml.cs">
       <DependentUpon>ConfirmView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NavigateProfileView.xaml.cs">
+      <DependentUpon>NavigateProfileView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\PageListView.xaml.cs">
       <DependentUpon>PageListView.xaml</DependentUpon>
@@ -150,7 +153,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Views\AddProfileView.xaml">
+    <Page Include="Views\NavigateProfileView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
