--- a/SturmProjekt/SturmProjekt/SturmProjekt.csproj
+++ b/SturmProjekt/SturmProjekt/SturmProjekt.csproj
@@ -102,10 +102,12 @@
     <Compile Include="Events\RechnungsPageEvent.cs" />
     <Compile Include="Events\RemovePictureEvent.cs" />
     <Compile Include="Events\SelectedPageEvent.cs" />
+    <Compile Include="Models\FileModel.cs" />
     <Compile Include="Models\LinesModel.cs" />
     <Compile Include="Models\PictureModel.cs" />
     <Compile Include="Models\ProfilePages.cs" />
     <Compile Include="ViewModels\AddRechnungViewModel.cs" />
+    <Compile Include="ViewModels\BulkEditViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\NavigateProfileViewModel.cs" />
     <Compile Include="ViewModels\PageListViewModel.cs" />
@@ -113,11 +115,8 @@
     <Compile Include="Views\AddRechnungView.xaml.cs">
       <DependentUpon>AddRechnungView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\ChooseProfileView.xaml.cs">
-      <DependentUpon>ChooseProfileView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\ConfirmView.xaml.cs">
-      <DependentUpon>ConfirmView.xaml</DependentUpon>
+    <Compile Include="Views\BulkEditView.xaml.cs">
+      <DependentUpon>BulkEditView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\NavigateProfileView.xaml.cs">
       <DependentUpon>NavigateProfileView.xaml</DependentUpon>
@@ -132,11 +131,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\ChooseProfileView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\ConfirmView.xaml">
+    <Page Include="Views\BulkEditView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
