--- a/SturmProjekt/SturmProjekt/packages.config
+++ b/SturmProjekt/SturmProjekt/packages.config
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="MSBuild.NugetContentRestore" version="0.1.6" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="NuGet.Tessnet2" version="1.1.1" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Unity" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
   <package id="Spire.PDF" version="3.9.360" targetFramework="net461" />
+  <package id="Tesseract" version="3.2.0-alpha4" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
 </packages>
