--- a/SturmProjekt/SturmProjekt/packages.config
+++ b/SturmProjekt/SturmProjekt/packages.config
@@ -4,6 +4,7 @@
   <package id="MSBuild.NugetContentRestore" version="0.1.6" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NuGet.Tessnet2" version="1.1.1" targetFramework="net461" />
+  <package id="PDFsharp-wpf" version="1.50.4619-beta4c" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Unity" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
