--- a/SturmProjekt/SturmProjekt/packages.config
+++ b/SturmProjekt/SturmProjekt/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net461" />
+  <package id="AForge.Imaging" version="2.2.5" targetFramework="net461" />
+  <package id="AForge.Math" version="2.2.5" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="MSBuild.NugetContentRestore" version="0.1.6" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
